--- a/HW-2704.html
+++ b/HW-2704.html
@@ -126,10 +126,10 @@ Could be the Amazon way, the Spotify or Apple music way or some other blog out t
             <div class="row">
                 <div class="col-md-6" style="background:black; color: white;">
                     <div class="row">
-                        <div class="col-3">some text</div>
-                        <div class="col-3">some text</div>
-                        <div class="col-3">some text</div>
-                        <div class="col-3">some text</div>
+                        <div class="col-3 col-md-3 col-lg-3 mb-5 mb-md-0">some text</div>
+                        <div class="col-3 col-md-3 col-lg-3 mb-5 mb-md-0">some text</div>
+                        <div class="col-3 col-md-3 col-lg-3 mb-5 mb-md-0">some text</div>
+                        <div class="col-3 col-md-3 col-lg-3 mb-5 mb-md-0">some text</div>
                     </div>
                 </div>
         </div>
